--- a/.classpath
+++ b/.classpath
@@ -4,24 +4,12 @@
 	<classpathentry including="**/*.java" kind="src" path="src/main/java"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="lib/junit-4.10.jar"/>
 	<classpathentry kind="lib" path="lib/finmath-lib-2.4.3-SNAPSHOT-java6.jar"/>
-	<classpathentry kind="lib" path="/home/cip/fries/workshop2017/git/mavenized-jcuda/target/lib/jcublas.jar"/>
-	<classpathentry kind="lib" path="/home/cip/fries/workshop2017/git/mavenized-jcuda/target/lib/jcublas-natives-linux-x86_64.jar"/>
-	<classpathentry kind="lib" path="/home/cip/fries/workshop2017/git/mavenized-jcuda/target/lib/jcuda.jar"/>
-	<classpathentry kind="lib" path="/home/cip/fries/workshop2017/git/mavenized-jcuda/target/lib/jcuda-natives-linux-x86_64.jar"/>
-	<classpathentry kind="lib" path="/home/cip/fries/workshop2017/git/mavenized-jcuda/target/lib/jcudnn.jar"/>
-	<classpathentry kind="lib" path="/home/cip/fries/workshop2017/git/mavenized-jcuda/target/lib/jcudnn-natives-linux-x86_64.jar"/>
-	<classpathentry kind="lib" path="/home/cip/fries/workshop2017/git/mavenized-jcuda/target/lib/jcufft.jar"/>
-	<classpathentry kind="lib" path="/home/cip/fries/workshop2017/git/mavenized-jcuda/target/lib/jcufft-natives-linux-x86_64.jar"/>
-	<classpathentry kind="lib" path="/home/cip/fries/workshop2017/git/mavenized-jcuda/target/lib/jcurand.jar"/>
-	<classpathentry kind="lib" path="/home/cip/fries/workshop2017/git/mavenized-jcuda/target/lib/jcurand-natives-linux-x86_64.jar"/>
-	<classpathentry kind="lib" path="/home/cip/fries/workshop2017/git/mavenized-jcuda/target/lib/jcusolver.jar"/>
-	<classpathentry kind="lib" path="/home/cip/fries/workshop2017/git/mavenized-jcuda/target/lib/jcusolver-natives-linux-x86_64.jar"/>
-	<classpathentry kind="lib" path="/home/cip/fries/workshop2017/git/mavenized-jcuda/target/lib/jcusparse.jar"/>
-	<classpathentry kind="lib" path="/home/cip/fries/workshop2017/git/mavenized-jcuda/target/lib/jcusparse-natives-linux-x86_64.jar"/>
-	<classpathentry kind="lib" path="/home/cip/fries/workshop2017/git/mavenized-jcuda/target/lib/jnvgraph.jar"/>
-	<classpathentry kind="lib" path="/home/cip/fries/workshop2017/git/mavenized-jcuda/target/lib/jnvgraph-natives-linux-x86_64.jar"/>
 	<classpathentry kind="lib" path="lib/commons-math3-3.6.1.jar"/>
+	<classpathentry kind="lib" path="/home/cip/fries/Downloads/JCuda-All-0.5.5-bin-linux-x86_64/jcublas-0.5.5.jar"/>
+	<classpathentry kind="lib" path="/home/cip/fries/Downloads/JCuda-All-0.5.5-bin-linux-x86_64/jcuda-0.5.5.jar"/>
+	<classpathentry kind="lib" path="/home/cip/fries/Downloads/JCuda-All-0.5.5-bin-linux-x86_64/jcufft-0.5.5.jar"/>
+	<classpathentry kind="lib" path="/home/cip/fries/Downloads/JCuda-All-0.5.5-bin-linux-x86_64/jcurand-0.5.5.jar"/>
+	<classpathentry kind="lib" path="/home/cip/fries/Downloads/JCuda-All-0.5.5-bin-linux-x86_64/jcusparse-0.5.5.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
