--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,25 @@
 	<version>0.0.1-SNAPSHOT</version>
 
 	<name>finmath-lib-cuda-extension</name>
-	<url>http://maven.apache.org</url>
+	<url>http://finmath.net</url>
+
+	<licenses>
+		<license>
+			<name>Apache License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+		</license>
+	</licenses>
+
+	<developers>
+		<developer>
+			<id>fries</id>
+			<name>Christian Fries</name>
+			<email>email@christian-fries.de</email>
+			<url>http://www.christian-fries.de</url>
+			<timezone>1</timezone>
+		</developer>
+	</developers>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
