--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,7 @@
 					<excludePackageNames>net.finmath.montecarlo.automaticdifferentiation.backward.alternative:net.finmath.rootfinder</excludePackageNames>
 					<header>
 			   			<![CDATA[
-						<span class="logo-white">finMath</span><span class="logo-red"> lib</span> documentation
+						<span class="logo-white">finMath</span><span class="logo-red"> lib</span> cuda-extensions documentation
 						<script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
 			   			]]>
 					</header>
