--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>net.finmath</groupId>
 	<artifactId>finmath-lib-cuda-extensions</artifactId>
-	<version>4.0.10</version>
+	<version>4.0.11-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>finmath-lib-cuda-extensions</name>
