--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
@@ -246,6 +247,9 @@
 			<activation>
 				<activeByDefault>true</activeByDefault>
 			</activation>
+			<properties>
+				<envClassifier>cuda-10.1</envClassifier>
+			</properties>
 			<dependencies>
 				<dependency>
 					<groupId>org.jcuda</groupId>
@@ -257,10 +261,19 @@
 					<artifactId>jcurand</artifactId>
 					<version>10.1.0</version>
 				</dependency>
+				<dependency>
+					<groupId>org.jocl</groupId>
+					<artifactId>jocl</artifactId>
+					<version>2.0.0</version>
+				</dependency>
 			</dependencies>
+
 		</profile>
 		<profile>
 			<id>cuda-10.0</id>
+			<properties>
+				<envClassifier>cuda-10.0</envClassifier>
+			</properties>
 			<dependencies>
 				<dependency>
 					<groupId>org.jcuda</groupId>
