--- a/pom.xml
+++ b/pom.xml
@@ -224,6 +224,41 @@
 				<filtering>false</filtering>
 			</resource>
 		</resources>
+
+		<pluginManagement>
+			<plugins>
+				<!--This plugin's configuration is used to store Eclipse m2e settings 
+					only. It has no influence on the Maven build itself. -->
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>biz.aQute.bnd</groupId>
+										<artifactId>
+											bnd-maven-plugin
+										</artifactId>
+										<versionRange>
+											[2.4.1,)
+										</versionRange>
+										<goals>
+											<goal>bnd-process</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore />
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
 	</build>
 
 	<dependencies>
@@ -238,6 +273,12 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>org.jocl</groupId>
+			<artifactId>jocl</artifactId>
+			<version>2.0.0</version>
 		</dependency>
 	</dependencies>
 
@@ -260,11 +301,6 @@
 					<groupId>org.jcuda</groupId>
 					<artifactId>jcurand</artifactId>
 					<version>10.1.0</version>
-				</dependency>
-				<dependency>
-					<groupId>org.jocl</groupId>
-					<artifactId>jocl</artifactId>
-					<version>2.0.0</version>
 				</dependency>
 			</dependencies>
 
