--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>net.finmath</groupId>
 	<artifactId>finmath-lib-cuda-extensions</artifactId>
-	<version>4.0.12-SNAPSHOT</version>
+	<version>4.0.12</version>
 	<packaging>jar</packaging>
 
 	<name>finmath-lib-cuda-extensions</name>
@@ -291,7 +291,7 @@
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<properties>
-				<envClassifier></envClassifier>
+				<envClassifier />
 			</properties>
 			<dependencies>
 				<dependency>
