--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
 		<dependency>
 			<groupId>net.finmath</groupId>
 			<artifactId>finmath-lib</artifactId>
-			<version>4.0.12</version>
+			<version>4.0.12-SNAPSHOT</version>
 		</dependency>
 
 		<dependency>
