--- a/pom.xml
+++ b/pom.xml
@@ -16,22 +16,22 @@
 	<version>4.0.13-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
+	<name>finmath-lib-cuda-extensions</name>
+	<description>
+		Enabling finmath-lib to perform Monte-Carlo simulations on the GPGPU using Cuda.
+	</description>
+	<url>http://www.finmath.net/finmath-lib</url>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<src.main.java.dir>src/main/java</src.main.java.dir>
-		<src.test.java.dir>src/main/java</src.test.java.dir>
+		<src.test.java.dir>src/test/java</src.test.java.dir>
 		<src.main.kotlin.dir>src/main/kotlin</src.main.kotlin.dir>
 		<src.test.kotlin.dir>src/test/kotlin</src.test.kotlin.dir>
 		<kotlin.version>1.2.0</kotlin.version>
 		<junit.version>4.12</junit.version>
 		<finmath-lib.version>4.1.0</finmath-lib.version>
 	</properties>
-
-	<name>finmath-lib-cuda-extensions</name>
-	<description>
-		Enabling finmath-lib to perform Monte-Carlo simulations on the GPGPU using Cuda.
-	</description>
-	<url>http://www.finmath.net/finmath-lib</url>
 
 	<licenses>
 		<license>
@@ -105,7 +105,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.0.1</version>
+				<version>3.1.1</version>
 				<configuration>
 					<doctitle>${project.name} (${project.version}) documentation</doctitle>
 					<stylesheetfile>stylesheet.css</stylesheetfile>
@@ -119,7 +119,7 @@
 					</header>
 					<footer>
 			   			<![CDATA[
-						<i>Copyright &copy; 2019 Christian&nbsp;P.&nbsp;Fries.</i>
+						<i>Copyright &copy; 2020 Christian&nbsp;P.&nbsp;Fries.</i>
 			   			]]>
 					</footer>
 					<tags>
@@ -165,18 +165,18 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
-				<version>3.7.1</version>
+				<version>3.8.2</version>
 				<dependencies>
 					<dependency>
 						<!-- add support for ssh/scp -->
 						<groupId>org.apache.maven.wagon</groupId>
 						<artifactId>wagon-ssh</artifactId>
-						<version>1.0</version>
+						<version>3.3.4</version>
 					</dependency>
 					<dependency>
 						<groupId>org.apache.maven.doxia</groupId>
 						<artifactId>doxia-module-markdown</artifactId>
-						<version>1.7</version>
+						<version>1.9</version>
 					</dependency>
 				</dependencies>
 			</plugin>
