Workaround - altering artifact name to reflect dependencies.

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,8 @@
 	</parent>
 
 	<groupId>net.finmath</groupId>
-	<artifactId>finmath-lib-cuda-extensions</artifactId>
+	<artifactId>finmath-lib-cuda-extensions${finmath-cuda.classifier}</artifactId>
+	<!-- issue: we cannot use the classifier, because the dependencies will differ -->
 	<version>4.1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -31,6 +32,7 @@
 		<kotlin.version>1.2.0</kotlin.version>
 		<junit.version>4.12</junit.version>
 		<finmath-lib.version>4.1.0</finmath-lib.version>
+		<finmath-cuda.classifier></finmath-cuda.classifier>
 	</properties>
 
 	<licenses>
@@ -310,6 +312,7 @@
 			</activation>
 			<properties>
 				<envClassifier />
+				<finmath-cuda.classifier></finmath-cuda.classifier>
 			</properties>
 			<dependencies>
 				<dependency>
@@ -328,6 +331,7 @@
 			<id>cuda-10.1</id>
 			<properties>
 				<envClassifier>cuda-10.1</envClassifier>
+				<finmath-cuda.classifier>cuda-10.1</finmath-cuda.classifier>
 			</properties>
 			<dependencies>
 				<dependency>
@@ -346,6 +350,7 @@
 			<id>cuda-10.0</id>
 			<properties>
 				<envClassifier>cuda-10.0</envClassifier>
+				<finmath-cuda.classifier></finmath-cuda.classifier>
 			</properties>
 			<dependencies>
 				<dependency>
@@ -364,6 +369,7 @@
 			<id>cuda-9.2</id>
 			<properties>
 				<envClassifier>cuda-9.2</envClassifier>
+				<finmath-cuda.classifier></finmath-cuda.classifier>
 			</properties>
 			<dependencies>
 				<dependency>
@@ -382,6 +388,7 @@
 			<id>cuda-6.0</id>
 			<properties>
 				<envClassifier>cuda-6.0</envClassifier>
+				<finmath-cuda.classifier></finmath-cuda.classifier>
 			</properties>
 			<dependencies>
 				<dependency>
