--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,8 @@
 
 	<groupId>net.finmath</groupId>
 	<artifactId>finmath-lib-cuda-extensions</artifactId>
-	<!-- issue: we cannot use the classifier, because the dependencies will differ -->
+	<!-- issue: we cannot use the classifier, because the dependencies will 
+		differ -->
 	<version>4.1.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
@@ -60,17 +61,24 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.jocl</groupId>
+			<artifactId>jocl</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.6</version>
+		</dependency>
+
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.jocl</groupId>
-			<artifactId>jocl</artifactId>
-			<version>2.0.0</version>
-		</dependency>
 	</dependencies>
 
 	<build>
