Using log level fine for finmath only.

--- a/logging.properties
+++ b/logging.properties
@@ -1,5 +1,7 @@
 handlers = java.util.logging.ConsoleHandler
-.level = FINE
+
+# Enable this to show logging for all loggers
+#.level = FINE
 
 java.util.logging.ConsoleHandler.level = FINE
 net.finmath.level = FINE
