--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 
 	<name>finmath-lib-cuda-extensions</name>
 	<description>
-		Vector class (RandomVarible) running on GPUs (Cuda and OpenCL). Enabling finmath lib with Cuda (via jcuda) and OpenCL (via jocl). - Running finmath lib models on a GPU.**
+		Vector class (RandomVariable) running on GPUs (Cuda and OpenCL). Enabling finmath lib with Cuda (via jcuda) and OpenCL (via jocl). - Running finmath lib models on a GPU.**
 	</description>
 	<url>http://finmath.net/finmath-lib-cuda-extensions</url>
 
