--- a/pom.xml
+++ b/pom.xml
@@ -29,8 +29,13 @@
 		<src.main.kotlin.dir>src/main/kotlin</src.main.kotlin.dir>
 		<src.test.kotlin.dir>src/test/kotlin</src.test.kotlin.dir>
 		<kotlin.version>1.2.0</kotlin.version>
-		<junit.version>4.12</junit.version>
+		<!-- libs -->
 		<finmath-lib.version>4.1.1</finmath-lib.version>
+		<!-- maven plugins -->
+		<junit.version>4.12</junit.version>
+		<javadoc.version>3.1.1</javadoc.version>
+		<checkstyle.version>3.1.1</checkstyle.version>
+		<clover.version>4.4.1</clover.version>
 	</properties>
 
 	<licenses>
@@ -112,7 +117,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.1.1</version>
+				<version>${javadoc.version}</version>
 				<configuration>
 					<source>8</source>
 					<doctitle>${project.name} (${project.version}) documentation</doctitle>
@@ -174,7 +179,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>3.0.0</version>
+				<version>${checkstyle.version}</version>
 				<configuration>
 					<configLocation>finmath-checkstyle.xml</configLocation>
 				</configuration>
@@ -259,7 +264,7 @@
 			<plugin>
 				<groupId>org.openclover</groupId>
 				<artifactId>clover-maven-plugin</artifactId>
-				<version>4.3.1</version>
+				<version>${clover.version}</version>
 				<configuration>
 				</configuration>
 				<executions>
@@ -502,7 +507,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.1.1</version>
+				<version>${javadoc.version}</version>
 				<configuration>
 					<source>8</source>
 					<doctitle>${project.name} (${project.version}) documentation</doctitle>
@@ -511,7 +516,7 @@
 					<excludePackageNames>net.finmath.montecarlo.automaticdifferentiation.backward.alternative:net.finmath.rootfinder</excludePackageNames>
 					<header>
 			   			<![CDATA[
-						<span class="logo-white">finMath</span><span class="logo-red"> lib</span> documentation
+						<span class="logo-white">finMath</span><span class="logo-red"> lib cuda-extensions</span> documentation
 						<script type="text/javascript" src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.2/MathJax.js?config=TeX-AMS-MML_HTMLorMML'></script>
 			   			]]>
 					</header>
@@ -569,14 +574,14 @@
 			<plugin>
 				<groupId>org.openclover</groupId>
 				<artifactId>clover-maven-plugin</artifactId>
-				<version>4.2.0</version>
+				<version>${clover.version}</version>
 				<configuration>
 				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>3.0.0</version>
+				<version>${checkstyle.version}</version>
 				<configuration>
 					<configLocation>finmath-checkstyle.xml</configLocation>
 				</configuration>
