--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,9 @@
 		<kotlin.version>1.2.0</kotlin.version>
 		<!-- libs -->
 		<finmath-lib.version>4.1.1</finmath-lib.version>
-		<!-- maven plugins -->
 		<junit.version>4.12</junit.version>
+		<!-- maven plugins -->
+		<surefire.version>2.21.0</surefire.version>
 		<javadoc.version>3.1.1</javadoc.version>
 		<checkstyle.version>3.1.1</checkstyle.version>
 		<clover.version>4.4.1</clover.version>
@@ -45,6 +46,11 @@
 			<distribution>repo</distribution>
 		</license>
 	</licenses>
+
+	<organization>
+		<name>finmath.net</name>
+		<url>http://finmath.net</url>
+	</organization>
 
 	<developers>
 		<developer>
@@ -168,7 +174,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.21.0</version>
+				<version>${surefire.version}</version>
 				<configuration>
 					<forkCount>1</forkCount>
 					<reuseForks>false</reuseForks>
@@ -569,7 +575,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-report-plugin</artifactId>
-				<version>2.20.1</version>
+				<version>${surefire.version}</version>
 			</plugin>
 			<plugin>
 				<groupId>org.openclover</groupId>
